--- a/app/index.html
+++ b/app/index.html
@@ -3,186 +3,155 @@
 
 <head>
   <title>Chat Room</title>
-  </title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="build/metro.min.css" />
   <link href="build/metro-icons.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="build/bundle/index.css" />
-  <style>
+  <style media="screen">
+    html,
     body {
-      margin: 1.2em;
-      background: linear-gradient(45deg, rgba(170, 224, 255, 0.17), rgba(120, 255, 120, 0.44), rgba(110, 255, 85, 0.4), rgba(247, 255, 130, 0.6)), linear-gradient(-45deg, #DAF1FF, #F3D8B6, rgba(123, 182, 255, 0.32), #FCFFD2);
-      background: linear-gradient(45deg, rgba(211, 239, 255, 0.42), rgba(182, 243, 182, 0.44), rgba(143, 255, 123, 0.4), rgba(252, 255, 210, 0.48)), linear-gradient(-45deg, #DAF1FF, #F3D8B6, rgba(255, 123, 214, 0.17), #FCFFD2);
-      background-attachment: fixed;
+      height: 100%;
+      overflow: hidden;
     }
 
-    .container {
-      width: 40%;
-      min-width: 450px;
-      max-width: 800px;
-      margin: auto;
-      background: rgba(255, 255, 255, 0.48);
-      //height: 100%;
-      overflow: auto;
-      padding: 1.6em 2em;
-    }
-
-    .outer {
-      background: #FFFCDD;
-      background: #FFFBD4;
-      padding: 0.6em 1.2em;
-      border-radius: 12px;
-      margin: 11px;
-      clear: both;
-      float: left;
-      color: #58636B;
-      box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.09);
+    .choose {
+      height: 50%;
+      background: #bcffbc;
       position: relative;
+      overflow: hidden;
     }
 
-    .outer:hover {
-      background: #FFF8B5;
+    .choose:nth-child(2) {
+      background: #fff4a3;
     }
 
-    .outer.right {
-      float: right;
-      background: #BDFFCB;
-      background: #E6E5DF;
-    }
-
-    .outer.right:hover {
-      background: #D6D5CB;
-    }
-
-    .outer> div:after {
-      content: attr(title);
-      position: absolute;
-      bottom: -1.5em;
-      left: 1em;
-      font-size: 0.8em;
-      color: #5C6D86;
-      display: block;
-      width: 15em;
+    .choose input {
+      width: 100%;
+      height: 100%;
+      background: transparent;
+      padding: 1em;
+      font-size: 4em;
+      color: rgba(0, 0, 0, 0.44);
       opacity: 0;
       transition: 0.2s all;
-      transform: translateY(-3px);
-      visibility: hidden;
+    }
+    .choose input::-webkit-input-placeholder{
+      color: white;
     }
 
-    .outer.right> div:after {
-      left: initial;
-      right: 1em;
-      text-align: right;
+    .cover {
+      background: rgba(255, 255, 255, 0.21);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      line-height: 4em;
+      text-align: center;
+      font-size: 7em;
+      text-shadow: 0 2px 5px rgba(0, 0, 0, 0.21);
+      font-family: moEospacIP
+      color: rgba(64, 70, 78, 0.68);
+      transition: 0.3s all;
+      transition-timing-function: ease-in-out;
     }
 
-    .outer:hover> div:after {
+    .cover {
+      background: rgba(0, 0, 0, 0.21);
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      line-height: 4em;
+      text-align: center;
+      font-size: 7em;
+      text-shadow: 0 2px 5px rgba(0, 0, 0, 0.21);
+      font-family: monospace;
+      color: rgba(255, 255, 255, 0.79);
+      transition: 0.3s all;
+      transition-timing-function: ease-in-out;
+      z-index: 10000000;
+    }
+
+    .cover:hover {
+      transform: scale(1.5);
+      color: rgba(64, 70, 78, 1);
+      background: rgba(0, 0, 0, 0.05);
+    }
+
+    .cover:hover {
+      transform: scale(1.5);
+      color: rgba(255, 255, 255, 1);
+    }
+
+    .choose:nth-child(2).focus .cover {
+      transform: translateY(100%);
+    }
+
+    .choose.focus .cover {
+      transform: translateY(-100%);
+    }
+    .choose.focus input {
       opacity: 1;
-      transform: translateY(0);
-      visibility: visible;
-    }
-
-    @media screen and (max-width: 569px) {
-      .container {
-        min-width: initial;
-        width: 85%;
-      }
     }
   </style>
+</head>
 
-  <body>
+<body>
 
-    <div class='container'>
-
-      <div class="outer">
-        <div class="box_l" id="1389296129040" title="2014年1月10日 3:35">通識幫我簽名</div>
-      </div>
-      <div class="outer">
-        <div class="box_l" id="1389296130981" title="2014年1月10日 3:35">~~</div>
-      </div>
-      <div class="outer right">
-        <div class="box_r" id="1389318788081" title="2014年1月10日 9:53">我遲到 沒辦法了 我問明翰他們</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883377753" title="2014年1月16日 22:42">ㄟㄟ</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883384376" title="2014年1月16日 22:43">微積分成績在哪</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883715112" title="2014年1月16日 22:48">YO</div>
-      </div>
-      <div class="outer right">
-        <div class="box_l" id="1389883768575" title="2014年1月16日 22:49">問李明翰拉幹 我跟他說了</div>
-      </div>
-      <div class="outer right">
-        <div class="box_r" id="1389318788081" title="2014年1月10日 9:53">我遲到 沒辦法了 我問明翰他們</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883377753" title="2014年1月16日 22:42">ㄟㄟ</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883384376" title="2014年1月16日 22:43">微積分成績在哪</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883715112" title="2014年1月16日 22:48">YO</div>
-      </div>
-      <div class="outer right">
-        <div class="box_l" id="1389883768575" title="2014年1月16日 22:49">問李明翰拉幹 我跟他說了</div>
-      </div>
-      <div class="outer right">
-        <div class="box_r" id="1389318788081" title="2014年1月10日 9:53">我遲到 沒辦法了 我問明翰他們</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883377753" title="2014年1月16日 22:42">ㄟㄟ</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883384376" title="2014年1月16日 22:43">微積分成績在哪</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883715112" title="2014年1月16日 22:48">YO</div>
-      </div>
-      <div class="outer right">
-        <div class="box_l" id="1389883768575" title="2014年1月16日 22:49">問李明翰拉幹 我跟他說了</div>
-      </div>
-      <div class="outer right">
-        <div class="box_r" id="1389318788081" title="2014年1月10日 9:53">我遲到 沒辦法了 我問明翰他們</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883377753" title="2014年1月16日 22:42">ㄟㄟ</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883384376" title="2014年1月16日 22:43">微積分成績在哪</div>
-      </div>
-      <div class="outer">
-        <div class="box_r" id="1389883715112" title="2014年1月16日 22:48">YO</div>
-      </div>
-      <div class="outer right">
-        <div class="box_l" id="1389883768575" title="2014年1月16日 22:49">問李明翰拉幹 我跟他說了</div>
-      </div>
-
-
-
+  <div class="choose">
+    <div class="cover">
+      SERVER
     </div>
+    <input type="text" data-type='server' placeholder="Enter IP">
 
-    <!-- <div class="content-wrapper" style="height: 100%;"></div> -->
+  </div>
+  <div class="choose">
+    <div class="cover">
+      CLIENT
+    </div>
+    <input type="text" data-type='client' placeholder="Enter IP">
 
-    <script>
-      const {
-        ipcRenderer
-      } = require('electron');
-      const fs = require('fs');
-      const {
-        dialog
-      } = require('electron').remote;
-    </script>
-    <script src="js/menu.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="build/metro.min.js"></script>
-    <script src="build/Chart.min.js"></script>
-    <script src="build/bundle/index.js"></script>
+  </div>
 
-  </body>
+  <script>
+    const {
+      ipcRenderer
+    } = require('electron');
+    const fs = require('fs');
+    const {
+      dialog
+    } = require('electron').remote;
+
+    // ipcRenderer.on('changeWindow', (event, arg) => {
+    //   console.log(arg); // prints "pong"
+    // });
+    // ipcRenderer.send('changeWindow', 'ping');
+  </script>
+  <script src="js/menu.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="build/metro.min.js"></script>
+  <script>
+    $(function() {
+      $('.choose').click(function() {
+        $('.choose').removeClass('focus');
+        $(this).addClass("focus");
+        $('input',this)[0].focus();
+      });
+      $('.choose input').keyup(function(e) {
+        if(e.keyCode === 13){
+          var data = {
+            type: $(this).data('type'),
+            ip: $(this).val()
+          };
+          ipcRenderer.send('changeWindow', JSON.stringify(data));
+        }
+      });
+    });
+  </script>
+
+</body>
 
 
 </html>
