fixed tcp server error

--- a/app/server.html
+++ b/app/server.html
@@ -43,6 +43,7 @@
           content: '對方已離開',
           type: 'info'
         });
+        clientList.splice(clientList.indexOf(client),1);
       });
     });
 
